fix: dark mode

--- a/src/ui/css/style.less
+++ b/src/ui/css/style.less
@@ -226,6 +226,9 @@ body {
 	.demo {
 		border-color: #e7e7e7;
 	}
+	.workItem .item-title {
+		color: #e7e7e7 !important;
+	}
 }
 
 #totop {
